--- a/frontend/src/app/Home/Hero/hero.module.css
+++ b/frontend/src/app/Home/Hero/hero.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   /* background: red; */
-  height: calc(100vh - var(--header-height));
+  height: 100lvh;
   width: 100%;
   /* border: 5px solid red; */
   display: flex;
@@ -9,6 +9,22 @@
   color: var(--primary-light);
   padding: 0 3rem;
   background: var(--primary-dark-panel);
+}
+
+.mediaWrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.mediaWrapperInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.image {
+  mix-blend-mode:screen  ;
+  filter: saturate(120%) contrast(120%) brightness(20%);
 }
 
 .inner {
@@ -23,13 +39,17 @@
   max-width: var(--max-layout-width);
 }
 
-.title {
+.title, .title * {
   font-size: var(--fs-hero);
+  /* color: var(--secondary-color); */
   /* border: 1px solid green; */
   text-align: center;
-  max-width: 25ch;
+  max-width: 30ch;
   height: fit-content;
   margin: 0;
+  position: relative;
+  /* font-family: var(--font-instrumentalSerif);
+  letter-spacing: 0.2rem; */
 }
 
 .ctaWrapper {
