--- a/frontend/src/app/Home/Info/Info.module.css
+++ b/frontend/src/app/Home/Info/Info.module.css
@@ -13,8 +13,6 @@
     );
 }
 
-
-
 .header {
   display: flex;
   flex-direction: column;
@@ -23,7 +21,6 @@
   gap: 0.75rem;
   margin-bottom: 3rem;
 }
-
 
 .layout {
   display: flex;
@@ -37,12 +34,18 @@
   gap: 3rem;
   flex: 1 1 52%;
   min-width: 380px;
+  /* border: 3px solid red; */
 }
 
 .colRight {
   flex: 1 1 48%;
   min-width: 380px;
   display: flex;
+  /* border: 3px solid green; */
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+
 }
 
 .statGrid {
@@ -53,9 +56,24 @@
   align-content: flex-start;
 }
 
-.statGrid > article {
+/* .statGrid > article {
   flex: 1 1 calc(50% - 1.5rem);
   min-width: 240px;
+} */
+
+.statFlexWrapper {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid red; */
+  gap: 3rem;
+}
+
+.statFlexSection {
+  flex: 1 1 calc(50% - 3rem);
 }
 
 .wideRow {
