--- a/frontend/src/app/Home/home.module.css
+++ b/frontend/src/app/Home/home.module.css
@@ -14,7 +14,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-family: var(--font-geist-sans);
+  /* font-family: var(--font-geist-sans); */
   background-color: var(--background);
 }
 
@@ -26,7 +26,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .intro {
@@ -42,7 +42,6 @@
   font-size: 40px;
   font-weight: 600;
   line-height: 48px;
-  letter-spacing: -2.4px;
   text-wrap: balance;
   color: var(--text-primary);
 }
@@ -117,7 +116,6 @@ a.secondary {
   .intro h1 {
     font-size: 32px;
     line-height: 40px;
-    letter-spacing: -1.92px;
   }
 }
 
